fix minor alignment issues

--- a/src/UiElements/TopMenuItem.css
+++ b/src/UiElements/TopMenuItem.css
@@ -1,6 +1,4 @@
 .menu-item {
-    display: flex;
-    align-items: center;
     padding: 0 0.5rem;
     color: var(--gray-darkest);
     transition: 0.2s;
@@ -10,7 +8,7 @@
 
 .menu-item > svg {
     margin-right: 0.35rem;
-    margin-top: 0.25rem;
+    vertical-align: middle;
 }
 
 .menu-item:hover {
